[package]
name = "thunk_simple"
description = "Simple alternative to the `thunk` crate's lazy evaluation types"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/AZMCode/thunk_simple"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
